Fix meal card names being too long

--- a/app/assets/stylesheets/modules/_meal_card.scss
+++ b/app/assets/stylesheets/modules/_meal_card.scss
@@ -33,11 +33,14 @@
   }
 
   h2 {
+    margin-bottom: 7px;
     position: absolute;
     bottom: 0px;
-    font-size: 30px;
+    font-size: 25px;
+    height: 60px;
     width: 100%;
     text-align: center;
+    overflow-y: auto;
     // margin-bottom: 0;
   }
 }
